--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="weblog1.png" alt="MyOnlineMeal.com">
+            <img src="/weblog1.png" alt="MyOnlineMeal.com">
         </div>
 
         <ul>
@@ -41,21 +41,21 @@
         <h1 class="h-primary center"><u><strong><i>Our Services</i></strong></u></h1>
         <div id="services">
             <div class="box">
-                <img src="../c1.jpg" alt="">
+                <img src="/c1.jpg" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
                     ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
                     natus autem esse voluptatibus quod laboriosam error consectetur culpa.</p>
             </div>
             <div class="box">
-                <img src="../c2.jpg" alt="">
+                <img src="/c2.jpg" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
                     ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
                     natus autem esse voluptatibus quod laboriosam error consectetur culpa.</p>
             </div>
             <div class="box">
-                <img src="c3.png" alt="">
+                <img src="/c3.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
                     ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
@@ -67,16 +67,16 @@
         <h1 class="h-primary center">Our Clients</h1>
             <div id="clients">
                 <div class="client-item">
-                    <img src="prologo2.png" alt="Our Client">
+                    <img src="/prologo2.png" alt="Our Client">
                 </div>
                 <div class="client-item">
-                    <img src="prologo4.png" alt="Our Client">
+                    <img src="/prologo4.png" alt="Our Client">
                 </div>
                 <div class="client-item">
                     <img src="prologo1.jpg" alt="Our Client">
                 </div>
                 <div class="client-item">
-                    <img src="prologo3.png" alt="Our Client">
+                    <img src="/prologo3.png" alt="Our Client">
                 </div>
             </div>
     </section>
