--- a/index.html
+++ b/index.html
@@ -1,116 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      One Of The Best Online Food Delivery Services In India | MyOnlineMeal.com
+    </title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 1100px)"
+      href="phone.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,400&family=Ysabeau+Office:wght@600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <style></style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Of The Best Online Food Delivery Services In India | MyOnlineMeal.com</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1100px)" href="phone.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;1,400&family=Ysabeau+Office:wght@600&display=swap"
-    rel="stylesheet">
-</head>
-<style>
-
-</style>
-
-<body>
+  <body>
     <nav id="navbar">
-        <div id="logo">
-            <img src="weblog1.png" alt="MyOnlineMeal.com">
-        </div>
+      <div id="logo">
+        <!--<img src="weblog1.png" alt="MyOnlineMeal.com" />-->
+        <img src="weblog1.jpg" alt="MyOnlineMeal.com" />
+      </div>
 
-        <ul>
-            <li class="class"><a href="#home">Home</a></li>
-            <li class="class"><a href="#services-container">Services</a></li>
-            <li class="class"><a href="#client-section">Our Clients</a></li>
-            <li class="class"><a href="#contact">Contact Us</a></li>
-        </ul>
+      <ul>
+        <li class="class"><a href="#home">Home</a></li>
+        <li class="class"><a href="#services-container">Services</a></li>
+        <li class="class"><a href="#client-section">Our Clients</a></li>
+        <li class="class"><a href="#contact">Contact Us</a></li>
+      </ul>
     </nav>
     <section id="home">
-        <h1 class="h-primary">WELCOME TO MyOnlineMeal</h1>
-        <p>Order food online for home delivery in Durgapur, Kolkata,Bangalore. Experience fastest food delivery service
-            with no minimum order & GPS tracking.</p>
-        <br>
-        <p>Order Food Online From Delivery Restaurants Serving In Durgapur ,Kolkata ,Bangalore From MyOnlineMeal. Enjoy
-            50% Off & Free Delivery On Your First Order.</p>
-        <button class="btn">Order Now</button>
+      <h1 class="h-primary">WELCOME TO MyOnlineMeal</h1>
+      <p>
+        Order food online for home delivery in Durgapur, Kolkata,Bangalore.
+        Experience fastest food delivery service with no minimum order & GPS
+        tracking.
+      </p>
+      <br />
+      <p>
+        Order Food Online From Delivery Restaurants Serving In Durgapur ,Kolkata
+        ,Bangalore From MyOnlineMeal. Enjoy 50% Off & Free Delivery On Your
+        First Order.
+      </p>
+      <button class="btn">Order Now</button>
     </section>
 
     <section id="services-container">
-        <h1 class="h-primary center"><u><strong><i>Our Services</i></strong></u></h1>
-        <div id="services">
-            <div class="box">
-                <img src="c1.jpg" alt="">
-                <h2 class="h-secondary center">Food Ordering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
-                    ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
-                    natus autem esse voluptatibus quod laboriosam error consectetur culpa.</p>
-            </div>
-            <div class="box">
-                <img src="c2.jpg" alt="">
-                <h2 class="h-secondary center">Food Catering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
-                    ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
-                    natus autem esse voluptatibus quod laboriosam error consectetur culpa.</p>
-            </div>
-            <div class="box">
-                <img src="c3.png" alt="">
-                <h2 class="h-secondary center">Bulk Ordering</h2>
-                <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sed iure cupiditate
-                    ipsam adipisci reprehenderit quia quas, expedita hic officia commodi reiciendis aspernatur aut minus
-                    natus autem esse voluptatibus quod laboriosam error consectetur culpa.</p>
-            </div>
+      <h1 class="h-primary center">
+        <u
+          ><strong><i>Our Services</i></strong></u
+        >
+      </h1>
+      <div id="services">
+        <div class="box">
+          <img src="../c1.jpg" alt="" />
+          <h2 class="h-secondary center">Food Ordering</h2>
+          <p class="center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            sed iure cupiditate ipsam adipisci reprehenderit quia quas, expedita
+            hic officia commodi reiciendis aspernatur aut minus natus autem esse
+            voluptatibus quod laboriosam error consectetur culpa.
+          </p>
         </div>
+        <div class="box">
+          <img src="../c2.jpg" alt="" />
+          <h2 class="h-secondary center">Food Catering</h2>
+          <p class="center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            sed iure cupiditate ipsam adipisci reprehenderit quia quas, expedita
+            hic officia commodi reiciendis aspernatur aut minus natus autem esse
+            voluptatibus quod laboriosam error consectetur culpa.
+          </p>
+        </div>
+        <div class="box">
+          <img src="c3.png" alt="" />
+          <h2 class="h-secondary center">Bulk Ordering</h2>
+          <p class="center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            sed iure cupiditate ipsam adipisci reprehenderit quia quas, expedita
+            hic officia commodi reiciendis aspernatur aut minus natus autem esse
+            voluptatibus quod laboriosam error consectetur culpa.
+          </p>
+        </div>
+      </div>
     </section>
     <section id="client-section">
-        <h1 class="h-primary center">Our Clients</h1>
-            <div id="clients">
-                <div class="client-item">
-                    <img src="prologo2.png" alt="Our Client">
-                </div>
-                <div class="client-item">
-                    <img src="prologo4.png" alt="Our Client">
-                </div>
-                <div class="client-item">
-                    <img src="prologo1.jpg" alt="Our Client">
-                </div>
-                <div class="client-item">
-                    <img src="prologo3.png" alt="Our Client">
-                </div>
-            </div>
+      <h1 class="h-primary center">Our Clients</h1>
+      <div id="clients">
+        <div class="client-item">
+          <img src="prologo2.png" alt="Our Client" />
+        </div>
+        <div class="client-item">
+          <img src="prologo4.png" alt="Our Client" />
+        </div>
+        <div class="client-item">
+          <img src="prologo1.jpg" alt="Our Client" />
+        </div>
+        <div class="client-item">
+          <img src="prologo3.png" alt="Our Client" />
+        </div>
+      </div>
     </section>
 
     <section id="contact">
-        <h1 class="h-primary center">Contact Us</h1>
-        <div id="contact-box">
-            <form action="">
-                <div class="form-group">
-                    <label for="name">Name : </label>
-                    <input type="text" name="name" id="name" placeholder="Enter your name">
-                </div>
-                <div class="form-group">
-                    <label for="name">Email : </label>
-                    <input type="text" name="email" id="email" placeholder="Enter your email">
-                </div>
-                <div class="form-group">
-                    <label for="name">Phone Number : </label>
-                    <input type="phone" name="phone" id="phone" placeholder="Enter your phone number">
-                </div>
-                <div class="form-group">
-                    <label for="name">Message : </label>
-                    <textarea name="message" id="message" cols="20" rows="20"></textarea>
-                </div>
-            </form>
-
-        </div>
+      <h1 class="h-primary center">Contact Us</h1>
+      <div id="contact-box">
+        <form action="">
+          <div class="form-group">
+            <label for="name">Name : </label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Enter your name"
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Email : </label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Phone Number : </label>
+            <input
+              type="phone"
+              name="phone"
+              id="phone"
+              placeholder="Enter your phone number"
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Message : </label>
+            <textarea
+              name="message"
+              id="message"
+              cols="20"
+              rows="20"
+            ></textarea>
+          </div>
+        </form>
+      </div>
     </section>
 
     <footer>
-        <div class="center">
-            Copyright &copy; www.myonlineMeal.com. All rights reserved!
-        </div>
+      <div class="center">
+        Copyright &copy; www.myonlineMeal.com. All rights reserved!
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
